# dfir-ogre

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
configuration/: ogre.yaml  ogre_docker.yaml  ogre_timeline.yaml  ogre_timeline_docker.yaml
docker/: Dockerfile  build.sh
src/ogre/: __init__.py  archive_extraction.py  archive_metadata.py  cli.py  commands.py  configuration.py  dfir_orc_unpack.py  logging.py  plugins.py  reporting.py  runner.py  sevenzip_rename_factory.py  template_vars.py  timeline.py  void_parser.py
src/ogre/archive/: __init__.py  extract_backend.py  extraction.py  getthis.py  matching.py  sevenzip_rename.py
src/ogre/config/: __init__.py  loader.py  models.py
src/ogre/execution/: __init__.py  metadata_utils.py  parser_execution.py  run_models.py  run_preparation.py
test/: __init__.py  sample_plugin.py  test_archive_modules.py  test_cli.py  test_commands.py  test_configuration.py  test_dfir_orc_unpack.py  test_logging.py  test_main.py  test_plugins.py  test_py7zr.py  test_runner.py  test_template_vars.py  test_timeline.py
test/data/: ogre_timeline.yaml  test_commands.yaml  test_commands_bad_output.yaml  test_commands_bad_parser.yaml  test_commands_bad_regex.yaml  test_commands_case.yaml  test_commands_json.yaml  test_commands_json_timestamp.yaml  test_commands_run.yaml  test_main.yaml
test/data/archive/: ORC_WorkStation_SampleOrc_162358_Outcome.json  ORC_WorkStation_SampleOrc_20230531_162358_Outline.json  ORC_WorkStation_WXPSP2_20250325_133230_Outcome.json  ORC_WorkStation_WXPSP2_20250325_133230_Outline.json  SampleOrc.7z  SampleOrc2.7z  _old_SampleOrc.7z
test/plugin_config/: bad_parser.xml  sample_text.xml  void.xml
