[project]
name = "dfir-ogre"
version = "2.0.0-beta1"
description = "A command‑line utility that extracts windows forensic artefact from DFIR-ORC archives"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dfir-ogre-common",
    "dfir-ogre-plugin-windows",
    "py7zr>=1.1.0",
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
    "chdb>=4.0.2"
]

[project.scripts]
dfir-ogre = "ogre:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ogre"]

[tool.uv.sources]
dfir-ogre-common = { git = "git+ssh://git@github.com/ANSSI-FR/dfir-ogre-common.git" }
dfir-ogre-plugin-windows = { git = "git+ssh://git@github.com/ANSSI-FR/dfir-ogre-plugin-windows.git" }

[tool.pyright]
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportAny = "none"
reportExplicitAny = "none"
reportUnusedCallResult ="none"
reportUnknownLambdaType = "none"
