[project]
name = "dfir-ogre"
version = "2.0.0-beta1"
description = "A command‑line utility that extracts windows forensic artefact from DFIR-ORC archives"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dfir-ogre-common",
    "dfir-ogre-plugin-windows",
    "py7zr>=1.1.0",
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
    "chdb>=4.0.2"
]

[project.scripts]
dfir-ogre = "ogre:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ogre"]

[tool.uv.sources]
dfir-ogre-common = { git = "https://github.com/ANSSI-FR/dfir-ogre-common.git" }
dfir-ogre-plugin-windows = { git = "https://github.com/ANSSI-FR/dfir-ogre-plugin-windows.git" }

[tool.pyright]
include = ["src", "test"]
typeCheckingMode = "basic"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnusedCallResult = "none"
reportUnknownLambdaType = "none"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B006", "B008", "B904"]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.16",
]
